# cli-layout

./: LICENSE  README.md  config.yaml  pyproject.toml
src/cli_layout/: app.py  config.py  events.py  subprocess_manager.py  widgets.py
src/cli_layout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cli_layout/backends/: base.py  claude_parser.py  plain_text_parser.py  registry.py
