[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-layout"
version = "0.1.0"
description = "Multi-section terminal UI wrapper for AI CLI tools"
requires-python = ">=3.10"
dependencies = [
    "textual>=3.0.0,<4.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
cli-layout = "cli_layout.app:main"

[tool.setuptools.packages.find]
where = ["src"]
